--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "rust-xpx-chain-sdk"
 version = "1.0.0-pre.1"
 readme = "README.md"
-license = "apache"
+license = "Apache-2.0"
 authors = ["Eleazar Garrido <eleazar.garrido@proximax.io>"]
 homepage = "https://www.proximax.io"
 repository = "https://github.com/proximax-storage/rust-xpx-chain-sdk"
