--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,11 +19,17 @@ crate-type = ["lib"]
 serde = "^1.0"
 serde_derive = "^1.0"
 serde_json = "^1.0"
+rust-xpx-crypto = { path = "../rust-xpx-crypto" }
+
 url = "1.5"
 hyper = "~0.11"
 serde_yaml = "0.7"
 base64 = "0.7.0"
 futures = "0.1.23"
+
+[dependencies.failure]
+version = "^0.1.1"
+default-features = false
 
 [dev-dependencies]
 tokio-core = "*"
