--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,9 +26,16 @@ hyper = "~0.11"
 serde_yaml = "0.7"
 base64 = "0.7.0"
 futures = "0.1.23"
+base32 = "0.4.0"
+ripemd160 = "0.8.0"
+hex = "^0.3"
 
 [dependencies.failure]
 version = "^0.1.1"
+default-features = false
+
+[dependencies.sha3]
+version = "^0.8"
 default-features = false
 
 [dev-dependencies]
