--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ base32 = "0.4.0"
 ripemd160 = "0.8.0"
 hex = "^0.3"
 regex = "1"
+byteorder = "1.3.2"
 
 [dependencies.failure]
 version = "^0.1.1"
