--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,10 +30,13 @@ base32 = "0.4.0"
 ripemd160 = "0.8.0"
 hex = "^0.3"
 regex = "1"
-byteorder = "1.3.2"
 
 [dependencies.failure]
 version = "^0.1.1"
+default-features = false
+
+[dependencies.slice_as_array]
+version = "1.1.0"
 default-features = false
 
 [dependencies.sha3]
@@ -41,4 +44,4 @@ version = "^0.8"
 default-features = false
 
 [dev-dependencies]
-tokio-core = "*"
+#tokio-core = "*"
