--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ serde_json = "^1.0"
 rust-xpx-crypto = { path = "../rust-xpx-crypto" }
 
 url = "1.5"
-hyper = "~0.11"
+hyper = "0.13"
 serde_yaml = "0.7"
 base64 = "0.7.0"
 futures = "0.1.23"
