--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ documentation = "https://github.com/proximax-storage/rust-xpx-chain-sdk/wiki"
 keywords = ["blockchain", "sdk"]
 categories = ["sdk"]
 exclude = [ ".gitignore" ]
+edition = "2018"
 
 [lib]
 name = "xpx_chain_sdk"
@@ -21,27 +22,26 @@ serde_derive = "^1.0"
 serde_json = "^1.0"
 rust-xpx-crypto = { path = "../rust-xpx-crypto" }
 
-url = "1.5"
+url = "2.1"
 hyper = "0.13"
+tokio = { version = "0.2", features = ["macros"] }
 serde_yaml = "0.7"
 base64 = "0.7.0"
-futures = "0.1.23"
+futures = "0.3"
 base32 = "0.4.0"
 ripemd160 = "0.8.0"
 hex = "^0.3"
 regex = "1"
 byteorder = "1"
+async-trait = "0.1"
+bytes = { version = "0.5", features = ["serde"] }
 
 [dependencies.rand]
 version = "0.6"
 default-features = false
 
 [dependencies.failure]
-version = "^0.1.1"
-default-features = false
-
-[dependencies.slice_as_array]
-version = "1.1.0"
+version = "0.1"
 default-features = false
 
 [dependencies.sha3]
@@ -49,4 +49,4 @@ version = "^0.8"
 default-features = false
 
 [dev-dependencies]
-#tokio-core = "*"
+#tokio = "*"
