--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,8 @@ base32 = "0.4.0"
 ripemd160 = "0.8.0"
 flatbuffers = "0.6.1"
 
+typetag = "0.1"
+
 bytes = { version = "0.5", features = ["serde"] }
 
 [dependencies.rand]
