--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,11 @@ name = "rust-xpx-chain-sdk"
 version = "0.1.0"
 readme = "README.md"
 license = "Apache-2.0"
-authors = ["Eleazar Garrido <eleazar.garrido@proximax.io>"]
+authors = ["ProxymaX Core Development Team"]
 homepage = "https://www.proximax.io"
 repository = "https://github.com/proximax-storage/rust-xpx-chain-sdk"
 documentation = "https://github.com/proximax-storage/rust-xpx-chain-sdk/wiki"
+readme = "README.md"
 keywords = ["blockchain", "sdk"]
 categories = ["sdk"]
 exclude = [ ".gitignore" ]
