--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,8 @@ name = "rust-xpx-chain-sdk"
 version = "0.1.0"
 readme = "README.md"
 license = "Apache-2.0"
-authors = ["ProxymaX Core Development Team"]
+authors = ["ProxymaX Core Development Team","Eleazar Garrido <eleazartovar123@gmail.com>"]
+
 homepage = "https://www.proximax.io"
 repository = "https://github.com/proximax-storage/rust-xpx-chain-sdk"
 documentation = "https://github.com/proximax-storage/rust-xpx-chain-sdk/wiki"
