--- a/apis/Cargo.toml
+++ b/apis/Cargo.toml
@@ -14,19 +14,18 @@ exclude = [ ".gitignore" ]
 edition = "2018"
 
 [dependencies]
-serde = "^1.0"
-serde_derive = "^1.0"
-serde_json = "^1.0"
-
 xpx-chain-sdk = { path = "../sdk", version = "0.1.0" }
 xpx-chain-utils = { path = "../utils" }
 
-hex = "^0.3"
-
-url = "2.1"
-hyper = "0.13"
-tokio = { version = "0.2", features = ["macros"] }
+serde = "^1.0"
+serde_derive = "^1.0"
+serde_json = "^1.0"
 typetag = "0.1"
+
+hex = "^0.3"
+bytes = "0.5.4"
+reqwest = "0.10"
+tokio = { version = "0.2", features = ["macros"] }
 
 [dependencies.failure]
 version = "0.1"
