--- a/apis/Cargo.toml
+++ b/apis/Cargo.toml
@@ -17,9 +17,9 @@ edition = "2018"
 xpx-chain-sdk = { path = "../sdk", version = "^0.1" }
 xpx-chain-utils = { path = "../utils" }
 
-serde = "^1.0"
-serde_derive = "^1.0"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "^1.0"
+
 typetag = "0.1"
 
 hex = "^0.3"
