--- a/websocket/Cargo.toml
+++ b/websocket/Cargo.toml
@@ -21,19 +21,33 @@ crate-type = ["lib"]
 xpx-chain-sdk = { path = "../sdk", version = "^0.1" }
 xpx-chain-apis = { path = "../apis", version = "^0.1" }
 
-futures = "0.3"
+[dependencies.futures-util]
+version = "0.3"
+default-features = false
+features = ["async-await", "sink", "std"]
 
-tokio-tungstenite = "*"
+[dependencies.tokio]
+version = "0.2"
+features = ["full"]
 
-tokio = { version = "0.2", features = ["full"] }
-futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
+[dependencies.tokio-tungstenite]
+version = "*"
 
-serde = "^1.0"
-serde_derive = "^1.0"
-serde_json = "^1.0"
+[dependencies.serde]
+version = "1.0"
+features = ["derive"]
 
-url = "2.0.0"
+[dependencies.serde_json]
+version = "^1.0"
 
-downcast-rs = "1.1"
+[dependencies.url]
+version = "2.0"
 
-bytes = "0.5"
+[dependencies.downcast-rs]
+version = "1.1"
+
+[dependencies.bytes]
+version = "0.5"
+
+[dependencies.failure]
+version = "0.1"
