--- a/websocket/Cargo.toml
+++ b/websocket/Cargo.toml
@@ -34,7 +34,7 @@ features = ["full"]
 version = "^0.10"
 
 [dependencies.serde]
-version = "1.0"
+version = "^1.0"
 features = ["derive"]
 
 [dependencies.serde_json]
